src/test/resources/purescript_examples/failing/ImportExplicit.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith UnknownImport\n')
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(ModuleName)
        PSASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(ImportModuleName)
          PSASTWrapperElement(Qualified)
            PsiElement(proper name)('M1')
          PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSASTWrapperElement(PositionedDeclarationRef)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('X')
          PsiElement(()('(')
          PsiElement(..)('..')
          PsiElement())(')')
        PsiElement())(')')
        PsiElement(whitespace)('\n')
